<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stvHelloNotice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="for outgoing calls"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGrpModeOut"
        >

        <RadioButton
            android:id="@+id/radioAllowAllOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sradioAllowAll" />

        <RadioButton
            android:id="@+id/radioAllowWListOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sradioAllowWList" />

        <RadioButton
            android:id="@+id/radioDisableBListOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sradioDisableBList" />

    </RadioGroup>

</LinearLayout>